# TUNNEX

./: CMakeLists.txt  README.md
ALGLIB/: ALGLIB_global.h  CMakeLists.txt  addDeclSpec.py  alglibinternal.h  alglibmisc.h  ap.h  dataanalysis.h  diffequations.h  fasttransforms.h  integration.h  interpolation.h  linalg.h  optimization.h  solvers.h  specialfunctions.h  statistics.h
QCustomPlot/: CMakeLists.txt  qcustomplot.cpp
Tunnex/: CMakeLists.txt  config.h.in  main.cpp
Tunnex/Resources/: Info.plist.in  WKB_graphic_icon.icns  tunnex.icns  tunnex.rc
cmake/: CPackVariables_Tunnex.cmake  NSIS.template.in
gui/: CMakeLists.txt  Doxyfile  conversion.cpp  conversion.h  definitions.h  gui_config.h.in
gui/controller/: AppMenu.cpp  AppMenu.h  CMakeLists.txt  CentralWidget.cpp  CentralWidget.h  CentralWidget_p.h  commands.cpp  commands.h  floatingPointQSlider.cpp  floatingPointQSlider.h  mainwindow.cpp  mainwindow.h  paramwidget.cpp  paramwidget.h  plotcontrol.cpp  plotcontrol.h  plotedit.cpp  plotedit.h  plotedit_p.h  resultwidget.cpp  resultwidget.h
gui/model/: AbstractInterpol.cpp  AbstractInterpol.h  AbstractXYDataFileModel.cpp  AbstractXYDataFileModel.h  CMakeLists.txt  WKBModel.cpp  WKBModel.h  interpolation.cpp  interpolation.h  paramlistmodel.cpp  paramlistmodel.h  resultModel.cpp  resultModel.h  tsvdata.cpp  tsvdata.h
gui/view/: CMakeLists.txt  CMakeLists.txt.orig  WKBWindowSession.ui  mainwindow.ui  paramwidget.ui  plotcontrol.ui  resultwidget.ui  resultwidget_new.ui
math/: CMakeLists.txt  abstractinterpol.cpp  abstractinterpol.h  adapt.cpp  adapt.h  baryrat_interp.cpp  baryrat_interp.h  findroot.cpp  findroot.h  math_global.h  polyinterpol.cpp  polyinterpol.h  rat_interp.cpp  rat_interp.h  splineinterpol.cpp  splineinterpol.h
